Name:            vxml
category:        XML
synopsis:        library to write xml documents enforcing dtd validity by the haskell type system
                 idea based on WASH - unstable library, things will and must change
version:         0.0
Cabal-Version: >=1.2
build-type:      Simple
LICENSE: GPL

Flag DoValidate
  Description: When set to True no type checking will take place (compilation will be much faster)
  Default: True

Library
  build-depends:   haskell98
                   ,base
                  , HList
                  , HaXml >= 1.19
                  , filepath
                  , mtl
                  , containers
                  , template-haskell
                  , directory
  exposed-modules: Text.XML.Validated.Types
                   Text.XML.Validated.Instance.String
  hs-source-dirs:  src
  extensions: CPP
  if flag(DoValidate)
    cpp-options: -DDoValidate
    extensions: OverlappingInstances

executable     test
  main-is:        test.hs
  hs-source-dirs: test, src
  build-depends:   haskell98
                  , base
                  , HList
                  , HaXml >= 1.19
                  , filepath
                  , mtl
                  , pretty
                  , containers
                  , template-haskell
  extensions: CPP
  if flag(DoValidate)
    cpp-options: -DDoValidate
    extensions: OverlappingInstances


executable     run-testcases
  main-is:        run-testcases.hs
  hs-source-dirs: test, src
  build-depends:   haskell98
                  , base
                  , HList
                  , HaXml >= 1.19
                  , filepath
                  , mtl
                  , pretty
                  , containers
                  , HUnit
                  , template-haskell
                  , directory
                  , process
  extensions: CPP
  if flag(DoValidate)
    cpp-options: -DDoValidate
