Name:            vxml
category:        XML
synopsis:        library to write xml documents enforcing dtd validity by the haskell type system
                 idea based on WASH - unstable library, things will and must change
version:         0.0.1
Cabal-Version: >=1.2
build-type:      Simple
LICENSE: GPL

Flag DoValidate
  Description: When set to True no type checking will take place (compilation will be much faster)
              False neither tested nor supported, will be removed
  Default: True
Flag StringOnly
  Description: I'm not yet sure how to implement more abstraction without specialization..
               The el type is not propagated through vxmlMapPlus :-(
               True neither tested nor supported, will be removed
  Default: False
Flag BuildTestSimple
  Default: True
  Description:
      wether to build the testSimple test
Flag BuildTestXHTML
  Default: False
  Description: 
      wether to build the testXHTMTL test
      you'll need the latest HaXML darcs version for this to work because only this will parse the XHTML-1.0 dtd
Flag BuildTestCases
  Default: False
  Description: 
      wether to build the executable running test cases
Flag BuildBenchpressTest
  Default: False
  Description: 
      wether to build the executable running a benchpress test on how fast ghc can comple VXML containing sources


Library
  build-depends:   haskell98
                   ,base
                  , HList
                  , HaXml >= 1.19
                  , filepath
                  , mtl
                  , containers
                  , template-haskell
                  , directory
  exposed-modules: Text.XML.Validated.Types
                   Text.XML.Validated.Instance.String
                   Text.XML.Validated.TH
  other-modules:  Text.XML.Validated.Util

  hs-source-dirs:  src
  extensions: CPP
  if flag(DoValidate)
    cpp-options: -DDoValidate
    extensions: OverlappingInstances
  if flag(StringOnly)
    cpp-options: -DSTRING_ONLY -Del=String -Del2=String -Del3=String -Delc3=String -Delc=String -DelA=String -DelB=String

executable     testSimple
  main-is:        testSimple.hs
  if !(flag(BuildTestSimple))
    buildable: False
  hs-source-dirs: test, src
  build-depends:   haskell98
                  , base
                  , HList
                  , HaXml >= 1.19
                  , filepath
                  , mtl
                  , pretty
                  , containers
                  , template-haskell
  extensions: CPP
  include-dirs: include
  extra-source-files: include/vxmldos.h
  if flag(DoValidate)
    cpp-options: -DDoValidate
    extensions: OverlappingInstances
  if flag(StringOnly)
    cpp-options: -DSTRING_ONLY

executable     testXHTMTL
  main-is:        testXHTML.hs
  if !(flag(BuildTestXHTML))
    buildable: False
  hs-source-dirs: test, src
  build-depends:   haskell98
                  , base
                  , HList
                  , HaXml >= 1.19
                  , filepath
                  , mtl
                  , pretty
                  , containers
                  , template-haskell
  include-dirs: include
  extra-source-files: include/vxmldos.h
  extensions: CPP
  if flag(DoValidate)
    cpp-options: -DDoValidate
    extensions: OverlappingInstances
  if flag(StringOnly)
    cpp-options: -DSTRING_ONLY -Del=String -Del2=String -Del3=String -Delc3=String -Delc=String -DelA=String -DelB=String
 

executable     run-testcases
  main-is:        run-testcases.hs
  if !(flag(BuildTestCases))
    buildable: False
  hs-source-dirs: test, src
  build-depends:   haskell98
                  , base
                  , HList
                  , HaXml >= 1.19
                  , filepath
                  , mtl
                  , pretty
                  , containers
                  , HUnit
                  , template-haskell
                  , directory
                  , process
  extensions: CPP
  if flag(DoValidate)
    cpp-options: -DDoValidate
  if flag(StringOnly)
    cpp-options: -DSTRING_ONLY -Del=String -Del2=String -Del3=String -Delc3=String -Delc=String -DelA=String -DelB=String



executable     run-benchpress-test
  main-is:        run-benchpress-test.hs
  if !(flag(BuildBenchpressTest))
    buildable: False
  hs-source-dirs: test, src
  build-depends:   haskell98
                  , base
                  , HList
                  , HaXml >= 1.19
                  , filepath
                  , mtl
                  , pretty
                  , containers
                  , HUnit
                  , template-haskell
                  , directory
                  , process
                  , benchpress
  extensions: CPP
  if flag(StringOnly)
    cpp-options: -DSTRING_ONLY -Del=String -Del2=String -Del3=String -Delc3=String -Delc=String  -DelA=String -DelB=String

